[gd_scene load_steps=6 format=3 uid="uid://2m3whgfowc7m"]

[ext_resource type="Script" path="res://scripts/hud/pause_menu.gd" id="1_46jq5"]
[ext_resource type="FontFile" uid="uid://cc4n1yg7bibc8" path="res://assets/fonts/paint/TMT-Paint-Regular.otf" id="1_csmqy"]
[ext_resource type="Texture2D" uid="uid://bis0eay2vp4u4" path="res://assets/hud/button.tga" id="2_pkxoe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xyu52"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbr56"]
texture = ExtResource("2_pkxoe")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_46jq5")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.2
theme_override_fonts/font = ExtResource("1_csmqy")
theme_override_font_sizes/font_size = 50
text = "PAUSED"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
mouse_filter = 2
theme_override_constants/separation = 50

[node name="ContinueContainer" type="Panel" parent="Container/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_xyu52")

[node name="TextureRect" type="TextureRect" parent="Container/Buttons/ContinueContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_pkxoe")

[node name="ContinueButton" type="Button" parent="Container/Buttons/ContinueContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_csmqy")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_dbr56")
text = "Continue"
flat = true

[node name="ExitContainer" type="Panel" parent="Container/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_xyu52")

[node name="TextureRect" type="TextureRect" parent="Container/Buttons/ExitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_pkxoe")

[node name="ExitButton" type="Button" parent="Container/Buttons/ExitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_csmqy")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_dbr56")
text = "Exit Game"
flat = true

[connection signal="pressed" from="Container/Buttons/ContinueContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Container/Buttons/ExitContainer/ExitButton" to="." method="_on_exit_button_pressed"]
